@@ -1,108 +1,193 @@
 ---
-title: Build Environment
+title: Build Environment of Cloud Manager
 description: Learn about Cloud Manager's build environment and how it builds and tests your code.
 exl-id: a4e19c59-ef2c-4683-a1be-3ec6c0d2f435
+solution: Experience Manager
+feature: Cloud Manager, Developing
+role: Admin, Architect, Developer
+
 ---
 
-# Build Environment {#build-environment} 
+# Build environment {#build-environment} 
 
 Learn about Cloud Manager's build environment and how it builds and tests your code.
 
-## Build Environment Details {#build-environment-details}
+>[!TIP]
+>
+>This document covers Cloud Manager's build environment for developing your AEM as a Cloud Service project. For details on client platforms supported by AEM as a Cloud Service for content authoring, please see the document [Supported Client Platforms.](/help/overview/supported-platforms.md)
+
+## Build environment details {#build-environment-details}
 
 Cloud Manager builds and tests your code using a specialized build environment.
 
-* The build environment is Linux-based, derived from Ubuntu 18.04.
-* Apache Maven 3.6.0 is installed.
-* The Java versions installed are Oracle JDK 8u202 and Oracle JDK 11.0.2.
-* By default, the `JAVA_HOME` environment variable is set to `/usr/lib/jvm/jdk1.8.0_202`  which contains Oracle JDK 8u202. See [Alternate Maven Execution JDK Version](#alternate-maven-jdk-version) section for more details.
-* There are some additional system packages installed which are necessary.
+* The build environment is Linux-based, derived from Ubuntu 22.04.
+* Apache Maven 3.9.4 is installed.
+  * Adobe recommends users [update their Maven repositories to use HTTPS instead of HTTP](#https-maven).
+<!-- OLD Removed 1/16/25 * The Java versions installed are Oracle JDK 11.0.22 and Oracle JDK 8u401. -->
+* The Java versions installed are Oracle JDK 11.0.22, Oracle JDK 17.0.10, and Oracle JDK 21.0.4.
 
+<!-- OLD Removed 1/16/25 * **IMPORTANT:** By default, the JAVA_HOME environment variable is set to `/usr/lib/jvm/jdk1.8.0_401`, which contains Oracle JDK 8u401. This default should be overridden for AEM Cloud Projects to use JDK 11. See the Setting the Maven JDK Version section for more details. -->
+* **IMPORTANT:** By default, the `JAVA_HOME` environment variable is set to `/usr/lib/jvm/jdk1.8.0_401`, which contains Oracle JDK 8u401. ***This default should be overridden for AEM Cloud Projects to use JDK 21 (preferred), 17, or 11***. See the [Setting the Maven JDK Version](#alternate-maven-jdk-version) section for more details.
+* There are some additional system packages installed which are necessary.
   * `bzip2`
   * `unzip`
   * `libpng`
   * `imagemagick`
   * `graphicsmagick`
-
-* Other packages may be installed at build time as described in the section [Installing Additional System Packages.](#installing-additional-system-packages)
-* Every build is done on a pristine environment; the build container does not keep any state between executions.
+* Other packages may be installed at build time as described in the section [Installing Additional System Packages](#installing-additional-system-packages).
+* Each build runs in a clean environment, with the build container retaining no state between executions.
 * Maven is always run with the following three commands.
-
- * `mvn --batch-mode org.apache.maven.plugins:maven-dependency-plugin:3.1.2:resolve-plugins`
- * `mvn --batch-mode org.apache.maven.plugins:maven-clean-plugin:3.1.0:clean -Dmaven.clean.failOnError=false`
- * `mvn --batch-mode org.jacoco:jacoco-maven-plugin:prepare-agent package`
+  * `mvn --batch-mode org.apache.maven.plugins:maven-dependency-plugin:3.1.2:resolve-plugins`
+  * `mvn --batch-mode org.apache.maven.plugins:maven-clean-plugin:3.1.0:clean -Dmaven.clean.failOnError=false`
+  * `mvn --batch-mode org.jacoco:jacoco-maven-plugin:prepare-agent package`
 * Maven is configured at a system level with a `settings.xml` file, which automatically includes the public Adobe artifact repository using a profile named `adobe-public`. (See [Adobe Public Maven Repository](https://repo1.maven.org/) for more details).
 
 >[!NOTE]
 >
->Although Cloud Manager does not define a specific version of the `jacoco-maven-plugin`, the version used must be at least `0.7.5.201505241946`.
+>Cloud Manager does not specify a specific version of the `jacoco-maven-plugin`, but the required version depends on the project's Java version. For Java 8, the plug-in version must be at least `0.7.5.201505241946`, while newer Java versions may require a more recent release.
 
-### Using a Specific Java Version {#using-java-support}
+## HTTPS Maven repositories {#https-maven}
 
-By default, projects are built by the Cloud Manager build process using the Oracle 8 JDK. Customers wishing to use an alternate JDK have two options.
+Cloud Manager [release 2023.10.0](/help/implementing/cloud-manager/release-notes/2023/2023-10-0.md) began a rolling update to the build environment (completing with release 2023.12.0), which included an update to Maven 3.8.8. A significant change introduced in Maven 3.8.1 was a security enhancement aimed at mitigating potential vulnerabilities. Specifically, Maven now disables all insecure `http://*` mirrors by default, as outlined in the [Maven release notes](https://maven.apache.org/docs/3.8.1/release-notes.html#cve-2021-26291).
 
-* [Use Maven Toolchains.](#maven-toolchains)
-* [Select an alternate JDK version for the entire Maven execution process.](#alternate-maven-jdk-version)
+As a result of this security enhancement, some users may face issues during the build step, particularly when downloading artifacts from Maven repositories that use insecure HTTP connections.
 
-#### Maven Toolchains {#maven-toolchains}
+To ensure a smooth experience with the updated version, Adobe recommends that users update their Maven repositories to use HTTPS instead of HTTP. This adjustment aligns with the industry's growing shift towards secure communication protocols and helps maintain a secure and reliable build process.
 
-The [Maven Toolchains Plugin](https://maven.apache.org/plugins/maven-toolchains-plugin/) allows projects to select a specific JDK (or toolchain) to be used in the context of toolchains-aware Maven plugins. This is done in the project's `pom.xml` file by specifying a vendor and version value.
+<!-- OLD below Removed 1/16/25
 
-```xml
-<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-toolchains-plugin</artifactId>
-    <version>1.1</version>
-    <executions>
-        <execution>
+### Use a specific Java version
+
+The Cloud Manager build process uses the Oracle 8 JDK to build projects by default, but AEM Cloud Service customers should set the Maven execution JDK version to 11. -->
+
+<!-- OLD below Removed 1/16/25
+
+#### Set the Maven JDK version
+
+Adobe recommends that you set the JDK version for the entire Maven execution to `11` in a `.cloudmanager/java-version file`.
+
+To do so, create a file named `.cloudmanager/java-version` in the git repository branch used by the pipeline. Edit the file so that it contains only the text, `11`. While Cloud Manager also accepts a value of `8`, this version is no longer supported for AEM Cloud Service projects. Any other value is ignored. When `11` is specified, Oracle 11 is used and the `JAVA_HOME` environment variable is set to `/usr/lib/jvm/jdk-11.0.22`. -->
+
+### Use a specific Java version {#using-java-support}
+
+The Cloud Manager build process uses the Oracle 8 JDK to build projects by default, but AEM Cloud Service customers should set the Maven execution JDK version to 21 (preferred), 17, or 11.
+
+#### Set the Maven JDK version {#alternate-maven-jdk-version}
+
+To set the Maven execution JDK, create a file named `.cloudmanager/java-version` in the Git repository branch used by the pipeline. Edit the file so that it contains only the text, `21` or `17`. While Cloud Manager also accepts a value of `8`, this version is no longer supported for AEM Cloud Service projects. Any other value is ignored. When `21` or `17` is specified, Oracle Java 21 or Oracle Java 17 is used. 
+
+
+#### Prerequisites for migrating to building with Java 21 or Java 17 {#prereq-for-building}
+
+To build with Java 21 or Java 17, Cloud Manager now uses SonarQube 9.9, which is compatible with these Java versions. This change was introduced in Cloud Manager release 2025.1.0. No customer action is required to upgrade SonarQube. For more details and to understand the change, see the [Release Notes for Cloud Manager 2025.1.0](/help/implementing/cloud-manager/release-notes/2025/2025-1-0.md).
+
+When migrating your application to a new Java build version and runtime version, thoroughly test in dev and stage environments before deploying to production.
+
+Adobe recommends the following deployment strategy:
+
+1. Run your local SDK with Java 21, which you can download from https://experience.adobe.com/#/downloads, and deploy your application to it and validate its functionality. Check the logs that there are no errors, which indicate problems with class loading or bytecode weaving.
+1. Configure a branch in your Cloud Manager repository to use Java 21 as the build time Java version, configure a DEV pipeline to use this branch and run the pipeline. Run your validation tests.
+1. If it looks good, configure your stage/prod pipeline to use Java 21 as the build time Java version and run the pipeline.
+
+##### About some translation features {#translation-features}
+
+The following features might not function correctly when deployed on the Java 21 runtime, and Adobe expects to resolve them by early 2025:
+
+* `XLIFF` (XML Localization Interchange File Format) fails when using Human Translation.  
+* `I18n` (Internationalization) does not properly handle language locales Hebrew (`he`), Indonesian (`in`), and Yiddish (`yi`) due to changes in the Locale constructor in newer Java versions.
+
+#### Runtime requirements {#runtime-requirements}
+
+The Java 21 runtime is used for builds with Java 21 and Java 17, and it will be applied gradually to Java 11 builds too (see the Note below). An environment must be on AEM release 17098 or more recent to receive the Java 21 update. To ensure compatibility, the following adjustments are required.
+
+Library updates can be applied anytime, as they remain compatible with older Java versions.
+
+* **Minimum version of ASM:**
+Update the usage of the Java package`org.objectweb.asm`, often bundled in `org.ow2.asm.*` artifacts, to version 9.5 or higher to ensure support for newer JVM runtimes.
+
+* **Minimum version of Groovy:**
+Update the usage of the Java packages `org.apache.groovy` or `org.codehaus.groovy` to version 4.0.22 or higher to ensure support for newer JVM runtimes.
+
+  This bundle can be indirectly included by adding third party dependencies such as the AEM Groovy Console.
+
+* **Minimum version of Aries SPIFly:**
+Update the usage of the Java package `org.apache.aries.spifly.dynamic.bundle` to version 1.3.6 or newer to ensure support for newer JVM runtimes.
+
+The AEM Cloud Service SDK supports Java 21 and lets you verify your project's compatibility with Java 21 before running a Cloud Manager pipeline.
+
+* **Edit a runtime parameter:**
+When running AEM locally with Java 21, the start scripts (`crx-quickstart/bin/start` or `crx-quickstart/bin/start.bat`) fail due to the `MaxPermSize` parameter. As a remedy, either remove `-XX:MaxPermSize=256M` from the script or define the environment variable `CQ_JVM_OPTS`, setting it to `-Xmx1024m -Djava.awt.headless=true`.
+
+  This issue is solved in the AEM Cloud Service SDK version 19149 and later.
+
+>[!IMPORTANT]
+>
+>When `.cloudmanager/java-version` is set to `21` or `17`, the Java 21 runtime is deployed. The Java 21 runtime is scheduled for gradual rollout to all environments (not just those environments whose code is built with Java 11) starting Tuesday, February 4, 2025. The rollouts start with sandboxes and development environments, followed by all production environments in April 2025. Customers who want to adopt the Java 21 runtime *earlier* can contact Adobe at [aemcs-java-adopter@adobe.com](mailto:aemcs-java-adopter@adobe.com).
+
+
+#### Build time requirements {#build-time-reqs}
+
+The following adjustments are required to allow building the project with Java 21 and Java 17. They can be updated even before you are running Java 21 and Java 17 because they are compatible with older Java versions.
+
+AEM Cloud Service customers are recommended to build their projects with Java 21 as early as possible to take advantage of new language features.
+
+* **Minimum version of `bnd-maven-plugin`:**
+Update the usage of `bnd-maven-plugin` to version 6.4.0 to ensure support for newer JVM runtimes. 
+
+  Versions 7 or higher are not compatible with Java 11 or lower so an upgrade to that version is not recommended.
+
+* **Minimum version of `aemanalyser-maven-plugin`:**
+Update the usage of `aemanalyser-maven-plugin` to version 1.6.6 or higher to ensure support for newer JVM runtimes.
+
+* **Minimum version of `maven-bundle-plugin`:**
+Update the usage of `maven-bundle-plugin` to version 5.1.5 or higher to ensure support for newer JVM runtimes. 
+
+  Versions 6 or higher are not compatible with Java 11 or lower so an upgrade to that version is not recommended.
+
+* **Update dependencies in `maven-scr-plugin`:**
+The `maven-scr-plugin` is not directly compatible with Java 21 or Java 17. However, descriptor files can be generated by updating the ASM dependency version in the plugin configuration, as shown in the following example:
+
+```XML
+<project>
+  ...
+  <build>
+    ...
+    <plugins>
+      ...
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-scr-plugin</artifactId>
+        <version>1.26.4</version>
+        <executions>
+          <execution>
+            <id>generate-scr-scrdescriptor</id>
             <goals>
-                <goal>toolchain</goal>
+              <goal>scr</goal>
             </goals>
-        </execution>
-    </executions>
-    <configuration>
-        <toolchains>
-            <jdk>
-                <version>11</version>
-                <vendor>oracle</vendor>
-            </jdk>
-        </toolchains>
-    </configuration>
-</plugin>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-analysis</artifactId>
+            <version>9.7.1</version>
+            <scope>compile</scope>
+          </dependency>
+        </dependencies>
+      </plugin>
+      ...
+    </plugins>
+    ...
+  </build>
+  ...
+</project>
 ```
 
-This will cause all toolchains-aware Maven plugins to use the Oracle JDK, version 11.
-
-When using this method, Maven itself still runs using the default JDK (Oracle 8) and the `JAVA_HOME`  environment variable is not changed. Therefore checking or enforcing the Java version through plugins like the Apache Maven Enforcer Plugin does not work and such plugins must not be used.
-
-The currently available vendor/version combinations are:
-
-|Vendor|Version|
-|---|---|
-|`oracle`|`8`|
-|`oracle`|`11`|
-|`sun`|`8`|
-|`sun`|`11`|
-
-This table refers to the product version numbers. Java build numbers or installation paths may reflect old Java version conventions such as 1.8 for Java 8.
-
->[!NOTE]
->
->Starting April 2022, Oracle JDK will be the default JDK for the development and operation of AEM applications. Cloud Manager's build process will automatically switch to using Oracle JDK, even if an alternative option is explicitly selected in the Maven toolchain. Please refer to the April release notes once published for further details.
-
-#### Alternate Maven Execution JDK Version {#alternate-maven-jdk-version}
-
-It is also possible to select Java 8 or Java 11 as the JDK for the entire Maven execution. Unlike the toolchains options, this changes the JDK used for all plugins unless the toolchains configuration is also  set in which case the toolchains configuration is still applied for toolchains-aware Maven plugins. As a result, checking and enforcing the Java version using the [Apache Maven Enforcer Plugin](https://maven.apache.org/enforcer/maven-enforcer-plugin/) will work.
-
-To do this, create a file named `.cloudmanager/java-version` in the git repository branch used by the pipeline. This file can have either the content 11 or 8. Any other value is ignored. If 11 is specified, Oracle 11 is used and the `JAVA_HOME` environment variable is set to `/usr/lib/jvm/jdk-11.0.2`. If 8 is specified, Oracle 8 is used and the `JAVA_HOME` environment variable is set to `/usr/lib/jvm/jdk1.8.0_202`.
-
-## Environment Variables {#environment-variables}
-
-### Standard Environment Variables {#standard-environ-variables}
+## Environment variables - standard {#environment-variables}
 
 You may find it necessary to vary the build process based on information about the program or pipeline. 
 
-For example, if build-time JavaScript minification is being done through a tool like gulp, there may be a desire to use a different minification level when building for a development environment as opposed to building for staging and production. 
+For instance, if JavaScript minification occurs at build time using a tool like gulp, different minification levels may be preferred for various environments. A development build might use a lighter minification level compared to staging and production.
 
 To support this, Cloud Manager adds these standard environment variables to the build container for every execution.
 
@@ -117,52 +202,15 @@ To support this, Cloud Manager adds these standard environment variables to the 
 | `ARTIFACTS_VERSION` |  For a stage or production pipeline, the synthetic version generated by Cloud Manager | 
 | `CM_AEM_PRODUCT_VERSION` |  The release version |
 
-### Pipeline Variables {#pipeline-variables}
+## Environment variables - pipeline {#pipeline-variables}
 
-Your build process may depend upon specific configuration variables which would be inappropriate to place in the git repository or you may need to vary them between pipeline executions using the same branch. 
+Your build process might require specific configuration variables that should not be stored in the Git repository. Additionally, you may need to adjust these variables between pipeline executions using the same branch.
 
-Cloud Manager allows for these variables to be configured through the Cloud Manager API or Cloud Manager CLI on a per-pipeline basis. Variables may be stored as either plain text or encrypted at rest. In either case, variables are made available inside the build environment as an environment variable which can then be referenced from inside the `pom.xml` file or other build scripts. 
+See also [Configure Pipeline Variables](/help/implementing/cloud-manager/configuring-pipelines/pipeline-variables.md) for more information.
 
-This CLI command sets a variable.
+## Install additional system packages {#installing-additional-system-packages}
 
-```shell
-$ aio cloudmanager:set-pipeline-variables PIPELINEID --variable MY_CUSTOM_VARIABLE test
-```
-
-This command lists variables.
-
-```shell
-$ aio cloudmanager:list-pipeline-variables PIPELINEID
-```
-
-Variable names must observe the following conventions.
-
-* Variables may only contain alphanumeric characters and the underscore (`_`).
-* The names should be all upper-case.
-* There is a limit of 200 variables per pipeline.
-* Each name must be less than 100 characters.
-* Each `string` variable value must be less than 2048 characters.
-* Each `secretString` type variable value must be less than 500 characters.
-
-When used inside a Maven `pom.xml` file, it is typically helpful to map these variables to Maven properties using a syntax similar to this.
-
-```xml
-        <profile>
-            <id>cmBuild</id>
-            <activation>
-                <property>
-                    <name>env.CM_BUILD</name>
-                </property>
-            </activation>
-            <properties>
-                <my.custom.property>${env.MY_CUSTOM_VARIABLE}</my.custom.property> 
-            </properties>
-        </profile>
-```
-
-## Installing Additional System Packages {#installing-additional-system-packages}
-
-Some builds require additional system packages to be installed to function fully. For example, a build may invoke a Python or Ruby script and will need to have an appropriate language interpreter installed. This can be done by calling the [`exec-maven-plugin`](https://www.mojohaus.org/exec-maven-plugin/) in your `pom.xml` to invoke APT. This execution should generally be wrapped in a Cloud Manager-specific Maven profile. This example installs Python.
+Some builds require additional system packages to function fully. For example, a build may invoke a Python or Ruby script and must have an appropriate language interpreter installed. This installation process can be managed by calling the [`exec-maven-plugin`](https://www.mojohaus.org/exec-maven-plugin/) in your `pom.xml` to invoke APT. This execution should generally be wrapped in a Cloud Manager-specific Maven profile. This example installs Python.
 
 ```xml
         <profile>
@@ -223,4 +271,4 @@ This same technique can be used to install language-specific packages, for examp
 
 >[!TIP]
 >
->For details about the front-end build environment, please see the document [Developing Sites with the Front-End Pipeline.](/help/implementing/developing/introduction/developing-with-front-end-pipelines.md)
+>For details about the front-end build environment, see [Developing Sites with the Front-End Pipeline](/help/implementing/developing/introduction/developing-with-front-end-pipelines.md).
